@@ -1,3 +1,9 @@
+2006-05-07  George Ogata  <g_ogata@optushome.com.au>
+
+	* lib/cast/preprocessor.rb: Added C::Preprocessor, a preprocessor
+	  that wraps around the command in Config::CONFIG['CPP'].  Assumes
+	  POSIX-style -D and -I options.
+
 2006-05-06  George Ogata  <g_ogata@optushome.com.au>
 
 	* lib/cast/c_nodes.rb: Added fields:
